# stock-prices

./: .copier-answers.yml  .dockerignore  .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  duties.py  events.json  main.py  mkdocs.yml  pyproject.toml  test_overlay.py
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: 1-bug.md  config.yml
.github/workflows/: ci.yml  pages.yml
config/: pytest.ini  ruff.toml
config/vscode/: launch.json
docs/: changelog.md  code_of_conduct.md  contributing.md  credits.md  demo.md  docker.md  index.md  license.md  runbook.md
docs/.overrides/partials/: comments.html
docs/css/: material.css
docs/js/: feedback.js  mermaid.js
docs/reference/: api.md
global/crypto/BTC-USD/: 20100101_20250611.parquet  20200101_20241231.parquet  20240101_20250101.parquet
global/fx/EURUSD=X/: 20240101_20241231.parquet
global/index/000001.SS/: 20100101_20250712.parquet
global/index/^GSPC/: 20240101_20241231.parquet
global/shares/000001.SS/: 20010101_20251230.parquet  20100101_20251230.parquet  20240101_20241230.parquet
global/shares/AAPL/: 20200101_20241231.parquet  20240101_20241231.parquet  20240101_20250101.parquet  20240501_20240530.parquet
global/shares/MSFT/: 20240501_20240530.parquet
global/shares/TSLA/: 20240501_20240530.parquet
global/shares/XOM/: 20100101_20251230.parquet
global/stocks/AAPL/: 20100101_20250611.parquet  20240101_20250101.parquet
lib/: dataset_builder.py  downloader.py  events.py  file_utils.py  global_data.py  graph.py  helpers.py  moex_data.py  moex_downloader.py  overlay.py  plotting.py  utils.py  validators.py
scripts/: gen_credits.py  get_version.py  make
src/stock_prices/: __init__.py  __main__.py
src/stock_prices/_internal/: cli.py  debug.py  models.py  pipeline.py  telegram_bot.py  telegram_requests.py
src/stock_prices/_internal/lib/: dataset_builder.py  downloader.py  events.py  file_utils.py  global_data.py  moex_data.py  overlay.py  plotting.py  utils.py  validators.py
stock/index/IMOEX/: 9783072001767052800.parquet
tests/: __init__.py  test_api.py  test_cli.py  test_downloader.py  test_env.py  test_market_data.py  test_plotting.py  test_telegram_bot.py
