[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "stock-prices"
description = "Animated plots"
authors = [{name = "Denis Irinyakov", email = "d.irinyakov@ddxfitness.ru"}]
license = "Apache-2.0"
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.10"
keywords = []
dynamic = ["version"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Documentation",
    "Topic :: Software Development",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = [
    "apimoex>=1.4",
    "currencyconverter>=0.18",
    "imageio-ffmpeg>=0.5",
    "matplotlib>=3.8",
    "numpy>=1.26",
    "pandas>=2.2",
    "pyarrow>=15",
    "requests>=2.31",
    "yfinance>=0.2",
]

[project.urls]
Homepage = "https://karnaksp.github.io/stock-prices"
Documentation = "https://karnaksp.github.io/stock-prices"
Changelog = "https://karnaksp.github.io/stock-prices/changelog"
Repository = "https://github.com/karnaksp/stock-prices"
Issues = "https://github.com/karnaksp/stock-prices/issues"
Discussions = "https://github.com/karnaksp/stock-prices/discussions"

[project.scripts]
stock-prices = "stock_prices:main"

[tool.pdm.version]
source = "call"
getter = "scripts.get_version:get_version"

[tool.pdm.build]
excludes = ["**/.pytest_cache", "**/.mypy_cache"]
source-includes = [
    "docs",
    "scripts",
    "tests",
    "mkdocs.yml",
    "*.md",
    "LICENSE",
]

[dependency-groups]
test = [
    "pytest>=8.2",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.29",
    # YORE: EOL 3.10: Remove line.
    "tomli>=2.0; python_version < '3.11'",
]

[tool.uv]
default-groups = ["test", "docs"]
